<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.dashboard.newpost.NewPostFragment">

        <Button
            android:id="@+id/button_back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:enabled="false"
            android:text="@string/publish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_post"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_back"/>

        <EditText
            android:id="@+id/editText_post_title"
            style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:gravity="center|top"
            android:hint="@string/post_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="25"
            android:minHeight="48dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <EditText
            android:id="@+id/editText_post_description"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:gravity="center|top"
            android:hint="@string/insert_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_post_title" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/choose_category"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editText_post_description"
            app:layout_constraintTop_toBottomOf="@+id/editText_post_description" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:minHeight="48dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <ImageButton
            android:id="@+id/imageButton_add_images"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_add_images"
            android:src="@drawable/image_logo"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_post_images"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton_add_images"
            app:layout_constraintStart_toEndOf="@+id/imageButton_add_images"
            app:layout_constraintTop_toTopOf="@+id/imageButton_add_images" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_imageSlider"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:elevation="20dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_add_images">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/imageSlider_loaded_images"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:iss_corner_radius="20"
                app:iss_title_background="@drawable/default_gradient" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/editText_email_address"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/provide_optional_email_contact"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_emailError" />

        <EditText
            android:id="@+id/editText_website"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/provide_optional_website"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_linkError" />

        <TextView
            android:id="@+id/textView_emailError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/md_theme_light_error"
            android:text="@string/invalid_email"
            app:layout_constraintEnd_toEndOf="@+id/editText_post_description"
            app:layout_constraintStart_toStartOf="@+id/editText_post_description"
            app:layout_constraintTop_toBottomOf="@+id/cardView_imageSlider" />

        <TextView
            android:id="@+id/textView_linkError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/md_theme_light_error"
            android:text="@string/invalid_link"
            app:layout_constraintEnd_toEndOf="@+id/textView_emailError"
            app:layout_constraintStart_toStartOf="@+id/textView_emailError"
            app:layout_constraintTop_toBottomOf="@+id/editText_email_address" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>