<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/reportsFragment"
        android:enabled="true"
        android:icon="@drawable/flag"
        android:title="@string/reports" />
    <item
        android:id="@+id/dashboardFragment"
        android:enabled="true"
        android:icon="@drawable/dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/currentUserProfileFragment"
        android:enabled="true"
        android:icon="@drawable/user_unfilled"
        android:title="@string/profile" />
</menu>