package it.unimib.communimib.main.dashboard;

import static android.view.MotionEvent.BUTTON_PRIMARY;
import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withSpinnerText;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import static org.hamcrest.CoreMatchers.containsString;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.Matchers.is;

import android.view.View;

import androidx.test.core.app.ActivityScenario;
import androidx.test.core.app.ApplicationProvider;
import androidx.test.espresso.UiController;
import androidx.test.espresso.ViewAction;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;

import com.google.android.material.bottomnavigation.BottomNavigationView;

import org.hamcrest.Matcher;
import org.junit.Before;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.concurrent.CountDownLatch;

import it.unimib.communimib.R;
import it.unimib.communimib.repository.IUserRepository;
import it.unimib.communimib.ui.main.MainActivity;
import it.unimib.communimib.util.ServiceLocator;

@RunWith(AndroidJUnit4.class)
@LargeTest
public class PostsMainViewUITest {

    private static boolean isLogged = false;
    private ActivityScenario<MainActivity> scenario;

    @Before
    public void setUp() throws InterruptedException {

        if(!isLogged){
            CountDownLatch countDownLatch = new CountDownLatch(1);
            IUserRepository userRepository = ServiceLocator.getInstance().getUserRepository(ApplicationProvider.getApplicationContext());

            userRepository.signIn("g.vitale16@campus.unimib.it", "Applicazione123!",
                    result -> {
                        if (result.isSuccessful()){
                            countDownLatch.countDown();
                            isLogged = true;
                        }
                    });
            countDownLatch.await();

        }
        scenario = ActivityScenario.launch(MainActivity.class);

        onView(withId(R.id.activityMainButtonMenu_bottomNavigation)).perform(new ViewAction() {
            @Override
            public Matcher<View> getConstraints() {
                return ViewMatchers.isAssignableFrom(BottomNavigationView.class);
            }

            @Override
            public String getDescription() {
                return "Click on menu item to navigate to dashboard";
            }

            @Override
            public void perform(UiController uiController, View view) {
                BottomNavigationView bottomNavigationView = (BottomNavigationView) view;
                bottomNavigationView.setSelectedItemId(R.id.dashboardFragment);
            }
        });

        onView(withId(R.id.dashboardFragment)).check(matches(ViewMatchers.isDisplayed()));

    }

    @Test
    public void testCreationButtonVisibility(){

        onView(withId(R.id.button_new_post)).check(matches(ViewMatchers.isDisplayed()));

        onView(withId(R.id.button_new_post)).perform(click());
    }

    @Test
    public void testCreationPostDialogAppears(){

        onView(withId(R.id.button_new_post)).perform(click());

        onView(withText(R.string.new_post)).check(matches(ViewMatchers.isDisplayed()));
    }
    @Test
    public void checkCategorySpinnerSelection(){

        onView(withId(R.id.button_new_post)).perform(click());

        String category = "Eventi";

        onView(withId(R.id.category_spinner)).perform(click());

        onData(allOf(is(instanceOf(String.class)), is(category))).perform(click());
        onView(withId(R.id.category_spinner)).check(matches(withSpinnerText(containsString(category))));
    }

     @Test
    public void testEnableButtonCreationPostDialog(){

         onView(withId(R.id.button_new_post)).perform(click());

         onView(withId(R.id.button_confirm)).check(matches(ViewMatchers.isNotEnabled()));

         onView(withId(R.id.editText_post_title)).perform(typeText("titolo"));

         onView(withId(R.id.editText_post_description)).perform(typeText("descrizione"));

         onView(withId(R.id.category_spinner)).perform(click());

         onData(allOf(is(instanceOf(String.class)), is("Eventi"))).perform(click());
         onView(withId(R.id.category_spinner)).check(matches(withSpinnerText(containsString("Eventi"))));

         onView(withId(R.id.button_confirm)).check(matches(ViewMatchers.isEnabled()));
     }


}
